8290020: Deadlock in leakprofiler::emit_events during shutdown

Reviewed-by: mbaesken
Backport-of: e8568b890a829f3481a57f4eb5cf1796e363858b