src/hotspot/share/jfr/jfr.hpp
@@ -48,7 +48,7 @@ class Jfr : AllStatic {
   static void on_unloading_classes();
   static void on_thread_start(Thread* thread);
   static void on_thread_exit(Thread* thread);
-  static void on_vm_shutdown(bool exception_handler = false);
+  static void on_vm_shutdown(bool exception_handler = false, bool halt = false);
   static bool on_flight_recorder_option(const JavaVMOption** option, char* delimiter);
   static bool on_start_flight_recording_option(const JavaVMOption** option, char* delimiter);
   static void on_vm_error_report(outputStream* st);
